crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_unclosed_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..19
  LIST@0..19
    LIST_ITEM@0..19
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..19
        INLINE_HTML@2..14
          INLINE_HTML_CONTENT@2..14 "<div id=\"d\">"
        NEWLINE@14..15 "\n"
        LINE_PREFIX@15..17 "  "
        TEXT@17..18 "x"
        NEWLINE@18..19 "\n"
