crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_pre_tab_indent_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..22
  LIST@0..22
    LIST_ITEM@0..22
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 "\t"
      PLAIN@2..22
        INLINE_HTML@2..7
          INLINE_HTML_CONTENT@2..7 "<pre>"
        NEWLINE@7..8 "\n"
        WHITESPACE@8..9 "\t"
        TEXT@9..13 "body"
        NEWLINE@13..14 "\n"
        WHITESPACE@14..15 "\t"
        INLINE_HTML@15..21
          INLINE_HTML_CONTENT@15..21 "</pre>"
        NEWLINE@21..22 "\n"
