crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_pre_tab_indent_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..22
  LIST@0..22
    LIST_ITEM@0..22
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 "\t"
      HTML_BLOCK_RAW@2..22
        HTML_BLOCK_TAG@2..8
          TEXT@2..7 "<pre>"
          NEWLINE@7..8 "\n"
        HTML_BLOCK_CONTENT@8..14
          LINE_PREFIX@8..9 "\t"
          TEXT@9..13 "body"
          NEWLINE@13..14 "\n"
        HTML_BLOCK_TAG@14..22
          LINE_PREFIX@14..15 "\t"
          TEXT@15..21 "</pre>"
          NEWLINE@21..22 "\n"
